--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,19 @@
 =================================================================
+## v0.32
+=================================================================
+
+-----------------------------------------------------------------
+## Attributes:
+
+
+-----------------------------------------------------------------
+## Win condition:
+
+AI Changes:
+- Large improvements to unit retreat logic
+
+
+=================================================================
 ## v0.31
 =================================================================
 
