--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,18 @@
 =================================================================
+## v0.34
+=================================================================
+
+-----------------------------------------------------------------
+## Attributes:
+
+Soviet:
+- KV-2 area of effect reduced slightly to prevent instant squad wipes:
+ * Mid range damage 0.25 -> 0.2
+ * Near range distance 0.5 -> 0.35
+ * Indirect fire aoe is now more similar to normal fire
+
+
+=================================================================
 ## v0.33
 =================================================================
 
