--- a/changelog.txt
+++ b/changelog.txt
@@ -14,6 +14,15 @@ Soviet:
  * Near range distance 0.5 -> 0.35
  * Indirect fire aoe is now more similar to normal fire
 
+-----------------------------------------------------------------
+## Win condition:
+
+General:
+- Penetration system changes:
+ * Increased penetration system scatter projectile search radius 2 -> 2.5
+ * Added veterancy modifier functionality
+ * Added target entity upgrade modifier functionality
+
 
 =================================================================
 ## v0.33
