--- a/changelog.txt
+++ b/changelog.txt
@@ -16,7 +16,7 @@ Soviet:
  * Far accuracy increased 0.05 -> 0.07
  * Near accuracy increased 0.4 -> 0.55
 - IL-2 Sturmovik autocannon rework:
- * Damage increased slightly 30 -> 20
+ * Damage decreased 30 -> 20
  * Accuracy increased 0.55 -> 0.75
  * Penetration decreased 42.5 -> 35
 
