Elefant Focused Sight buff

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,15 @@
 =================================================================
+## v0.40
+=================================================================
+
+-----------------------------------------------------------------
+## Attributes:
+
+Ostheer:
+- Elefant Focused sight addition modifier increased +10 -> +15 (the total sight radius also gets increased by a win condition LOS percentage modifier)
+
+
+=================================================================
 ## v0.39
 =================================================================
 
